--- a/Poetron/requirements.txt
+++ b/Poetron/requirements.txt
@@ -1,7 +1,9 @@
-torch>=1.9.0
-transformers>=4.0.0
-datasets>=1.18.0
+torch>=2.1.0
+transformers==4.41.2
+datasets==2.19.2
+accelerate==0.30.1
+tokenizers==0.19.1
+huggingface_hub==0.23.4
 click>=8.0.0
 requests>=2.25.0
 kagglehub>=0.2.0
-accelerate>=1.1.0
