--- a/Poetron/requirements.txt
+++ b/Poetron/requirements.txt
@@ -1,9 +1,10 @@
 torch>=2.1.0
 transformers==4.41.2
 datasets==2.19.2
-accelerate==0.16.0
+accelerate==0.21.0
 tokenizers==0.19.1
-huggingface_hub==0.23.4
+huggingface_hub==0.25.1
 click>=8.0.0
 requests>=2.25.0
 kagglehub>=0.2.0
+peft==0.17.1
