--- a/Poetron/requirements.txt
+++ b/Poetron/requirements.txt
@@ -1,10 +1,15 @@
 torch>=2.1.0
-transformers>=4.44.0  
+torchvision>=0.16.0    
+transformers>=4.44.0
 datasets>=2.19.2
-accelerate>=0.30.0   
+accelerate>=0.30.0
+peft>=0.11.0
+
+bitsandbytes>=0.43.0
+scipy
 tokenizers>=0.19.0
+sentencepiece
 huggingface_hub>=0.25.1
-peft>=0.11.0         
 click>=8.0.0
 requests>=2.25.0
 kagglehub>=0.2.0
